<resources>
    <string name="app_name">Zephiro</string>
    <string name="nombreApp">Zephiro</string>

    <!-- LoginFragment -->
    <string name="botonInicioSesion">Iniciar sesión</string>
    <string name="mensajeBienvenida">¡Bienvenido de vuelta!</string>
    <string name="correo">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidasteContrasena">¿Olvidaste tu contraseña?</string>
    <!-- Fin LoginFragment -->
    <string name="Register">Registrarme</string>
    <string name="Login">Iniciar sesión</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="correoElectronico">Correo electrónico</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>

    <!-- RegisterFragment -->
    <string name="registrarse">Registrarme</string>

    <!-- Menu de navegación -->
    <string name="opcion1">Inicio</string>
    <string name="opcion2">Seguimiento</string>
    <string name="opcion3">Jardin</string>
    <string name="opcion4">Contenido</string>
    <string name="opcion5">Perfil</string>
    <!-- Fin Menu de navegación -->

    <!-- Home -->
    <string name="mensajePersona">Hola, [Nombre]!</string>
    <!-- Fin Home -->

    <!-- ContentFragment -->
    <string name="ejemplo">Contenido</string>
    <string name="nombreCategoria">Contenido recomendado</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <!-- Fin ContentFragment -->

    <!-- Specific content -->
    <string name="nombreArticulo">Nombre del articulo</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </string>
    <string name="VolverEspecifico">Contenidos</string>
    <string name="Visto">Visto</string>
    <string name="Enlace">Ir</string>
    <!-- Fin Specific content -->

    <!-- ProfileFragment -->
    <string name="botonEliminarCuenta">Eliminar cuenta</string>
    <string name="contactosEmergencia">Contactos de emergencia</string>
    <string name="metricas">Métricas</string>
    <string name="eliminarCuenta">Eliminar tu cuenta</string>
    <string name="numerosEmergencia">Ayuda de emergencia</string>
    <!-- Fin ProfileFragment -->

    <!-- CreateEmergencyContactFragment -->
    <string name="nombreContacto">Nombre del contacto</string>
    <string name="telefonoContacto">Teléfono del contacto</string>
    <string name="correoContacto">Correo del contacto</string>
    <string name="botonCrearContacto">Crear contacto</string>
    <string name="VolverContactosEmergencia">Contactos de emergencia</string>
    <string name="botonActualizarContacto">Actualizar contacto</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Fin CreateEmergencyContactFragment -->

    <!-- EmergencyNumbersFragment -->
    <string name="tituloEmergencia">Números de emergencia</string>
    <string name="numBogota">Línea 106 Bogotá</string>
    <string name="infoBogota">Apoyo emocional 24/7 para residentes en Bogotá.</string>
    <string name="numeroBogota">📞 601 106</string>
    <string name="numNacional">Línea Nacional Salud Mental</string>
    <string name="infoNacional">Línea gratuita del Ministerio de Salud.</string>
    <string name="numeroNacional">📞 01 8000 42 47 42</string>
    <string name="numJaveriana">Bienestar Psicológico Javeriana</string>
    <string name="infoJaveriana">Orientación psicológica para estudiantes Javerianos.</string>
    <string name="numeroJaveriana">📞 601 320 83 20 Ext. 2215 – 2235 – 2275</string>
    <string name="avisoImportante">⚠️ Zephiro no tiene ninguna relación con estas organizaciones. Esta información se proporciona únicamente con fines informativos.</string>
    <!-- Fin EmergencyNumbersFragment -->

    <!-- SurveyLargeFragment -->
    <string name="tituloEncuesta">Encuesta diurna</string>
    <string name="tituloEncuestaPm">Encuesta nocturna</string>
    <string name="tituloEncuestaPSS">Encuesta semanal</string>
    <string name="tituloEncuestaGAD">Encuesta de estres</string>
    <!-- Fin SurveyLargeFragment -->

    <!-- SurveySmallFragment y SurveySmallPm -->
    <string name="estres">Estres</string>
    <string name="nivelEstres">Desliza para indicar tu nivel de estrés al empezar el dia</string>
    <string name="ansiedad">Ansiedad</string>
    <string name="nivelAnsiedad">Desliza para indicar tu estado</string>
    <string name="sueno">Sueño</string>
    <string name="nivelSueno">Desliza para indicar cuantas horas dormiste la noche anterior</string>
    <string name="alimentacion">Alimentación</string>
    <string name="nivelAlimentacion">Escribe que comiste hoy durante el dia</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="nivelEjercicio">Activa para indicar que hoy hiciste ejercicio</string>
    <string name="nivelControl">Activa para indicar que el control que tuviste hoy</string>
    <string name="nivelCalma">Activa para indicar que hoy hiciste ejercicio</string>
    <string name="nivelPensamientos">Activa para indicar que hoy hiciste ejercicio</string>
    <string name="nivelActividadFisica">Activa para indicar que hoy hiciste ejercicio</string>

    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="slider_desc">Ajusta el nivel</string>
    <!-- Fin SurveySmallFragment y SurveySmallPm-->

    <!-- SurveySmall -->
    <string name="volver">Volver</string>
    <string name="tituloEncuestaCorta">Titulo - Encuesta corta am</string>
    <string name="tituloEncuestaCortaPm">Titulo - Encuesta corta pm</string>
    <!-- Fin SurveySmall -->
  
    <!-- TrackerMainFragment -->
    <string name="tituloTracker">Registros diarios a través del tiempo</string>
    <!-- Fin TrackerMainFragment -->
    
    <!-- GardenScreens -->
    <string name="VolverJardin">Jardin</string>

    <!-- GardenInventoryFragment -->
    <string name="tituloALmacenPlantas">Tus plantas guardadas</string>
    <string name="tituloAlmacenFondos">Tus fondos</string>
    <!-- Fin GardenInventoryFragment -->

    <!-- GardenStoreFragment -->
    <string name="tituloTiendaPlantas">Plantas para personalizar tu jardin</string>
    <string name="tituloTIendaFondos">Fondos para ambientar tu jardin</string>
    <!-- Fin GardenInventoryFragment -->

    <!-- Grafica -->
    <string name="tituloGrafica">Graficas a tener en cuenta</string>
</resources>