<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/star"
        android:title="@string/opcion1"/>
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/heart"
        android:title="@string/opcion2"/>
    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/sun"
        android:title="@string/opcion3"/>
    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/image"
        android:title="@string/opcion4"/>
    <item
        android:id="@+id/item_5"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/opcion5"/>
</menu>