<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app=  "http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardSueno"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/preguntaSueno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sueno"
            android:fontFamily="@font/titulos"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceTitleMedium"/>

        <!-- Subtítulo opcional -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nivelSueno"
            android:fontFamily="@font/normal"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"/>

        <!-- Slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/range_slider_sueno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slider_desc"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
