<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardEstres"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/preguntaEstres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titulos"
            android:text="@string/estres"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nivelEstres"
            android:fontFamily="@font/normal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>

        <!-- Slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/range_slider_estres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slider_desc"
            app:values="@array/initial_slider_values"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            android:stepSize="25.0"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
