<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EDF7"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/headerLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#F3E5F5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreApp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </FrameLayout>

    <!-- Lotti -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:lottie_rawRes="@raw/flower"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/headerLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <!-- Botones de registro/inicio de sesión -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/animationLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:checked="true"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Campos de entrada -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correoElectronico"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Botón de iniciar sesión -->
    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/botonInicioSesion"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Botón para la parte de olvidar la contra -->
    <TextView
        android:id="@+id/olvidasteContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidasteContrasena"
        android:textSize="15sp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/botonIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
