<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">

    <!-- Encabezado -->
    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/zephiro_letra"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
    </FrameLayout>

    <!-- Lotti -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationRegister"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:lottie_rawRes="@raw/flower"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <!-- Botones de registro/inicio de sesión -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/animationRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:checked="true"
            android:fontFamily="@font/normal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:fontFamily="@font/normal"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Campos de entrada -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombreCompleto"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/textFieldBackground"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correoElectronico"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/textFieldBackground"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/textFieldBackground"
        app:boxStrokeColor="?attr/colorPrimary"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmarContrasena"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/textFieldBackground"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        android:inputType="textPassword"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fechaNacimiento"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/textFieldBackground"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de calendario -->
    <ImageButton
        android:id="@+id/birthdatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="@id/birthdateInputLayout"
        app:layout_constraintTop_toTopOf="@id/birthdateInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/birthdateInputLayout"
        android:layout_marginEnd="10dp"/>

    <!-- Botón de registrarse -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonIniciarSesion"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/registrarse"
        android:textSize="20sp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/birthdateInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>